# Closed-Loop-Control-and-Trajectory-Planning-for-a-4-DOF-Robotic-Arm

./: README.md  fk_ik_verification.py  frames_2025-06-20_13.27.20.gv
src/asrs_robot/: CMakeLists.txt  package.xml
src/asrs_robot/config/: joint_names_asrs_robot.yaml  urdf.rviz
src/asrs_robot/launch/: display.launch.py  gazebo.launch.py
src/asrs_robot/meshes/: assembly_gripper_byme.STL  base_link.STL  base_link.dae  gripper.STL  link3.STL  link3.dae
src/asrs_robot/urdf/: asrs_robot.csv  asrs_robot.urdf.xacro
src/asrs_robot_apps/: CMakeLists.txt  package.xml
src/asrs_robot_apps/src/: capture_tcp_pose.cpp  pick_place_from_states.cpp
src/asrs_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/asrs_robot_moveit_config/config/: asrs_robot.ros2_control.xacro  asrs_robot.srdf  asrs_robot_moveit.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  trajectory_execution.yaml
src/asrs_robot_moveit_config/launch/: demo.launch.py  demo_microros.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/teensy_hardware_interface/: CMakeLists.txt  package.xml  teensy_hardware_interface.xml
src/teensy_hardware_interface/include/teensy_hardware_interface/: teensy_system.hpp
src/teensy_hardware_interface/src/: teensy_system.cpp
src/trajectory_bridge/: package.xml  setup.py
src/trajectory_bridge/launch/: trajectory_bridge.launch.py
src/trajectory_bridge/trajectory_bridge/: bridge_trajectory_to_targets.py  moveit_teensy_bridge.py
src/web_moveit_gateway_cpp/: CMakeLists.txt  package.xml
src/web_moveit_gateway_cpp/src/: gateway.cpp
